Revisão geral de comentários javadoc, criação de teste unitário